--- a/weldx/schemas/weldx.bam.de/weldx/time/timedelta-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/time/timedelta-0.1.0.yaml
@@ -5,21 +5,16 @@ id: "asdf://weldx.bam.de/weldx/schemas/time/timedelta-0.1.0"
 
 title: |
   Represents a difference between two instances in time.
+description: |
+      Integer representation of the timedelta full ISO format.
 
 examples:
   -
     - A timedelta of 10 s
     - |
-      !<asdf://weldx.bam.de/weldx/tags/time/timedelta-0.1.0> {value: P0DT0H0M10S}
+      !<asdf://weldx.bam.de/weldx/tags/time/timedelta-0.1.0> P0DT0H0M10S
 
-type: object
-properties:
-  value:
-    description: |
-      Integer representation of the timedelta full ISO format.
-    type: string
-    #pattern: TODO: correct ISO string pattern
-
-required: [value]
-propertyOrder: [value]
+type: string
+tag: "asdf://weldx.bam.de/weldx/tags/time/timedelta-0.1.0"
+#pattern: TODO: correct ISO string pattern
 ...
