use weldx (only) quantity in all schemas

--- a/weldx/schemas/weldx.bam.de/weldx/aws/design/base_metal-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/aws/design/base_metal-0.1.0.yaml
@@ -32,9 +32,7 @@ properties:
   thickness:
     description: |
       Plate or sheet thickness, if tube, specifies wall thickness.
-    oneOf:
-      - tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.*"
-      - tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
+    tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.*"
 
   diameter:
     description: |
