--- a/weldx/schemas/weldx.bam.de/weldx/aws/design/joint_penetration-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/aws/design/joint_penetration-0.1.0.yaml
@@ -20,9 +20,7 @@ properties:
   root_penetration:
     description: |
       The distance the weld metal extends into the root joint
-    oneOf:
-      - tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.*"
-      - tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
+    tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.*"
 
   groove_weld_size:
     description: |
