--- a/weldx/schemas/weldx.bam.de/legacy/aws/process/shielding_gas_for_procedure-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/legacy/aws/process/shielding_gas_for_procedure-1.0.0.yaml
@@ -19,12 +19,12 @@ examples:
             gas_component:
             - !<tag:weldx.bam.de:weldx/aws/process/gas_component-1.0.0>
               gas_chemical_name: argon
-              gas_percentage: !unit/quantity-1.1.0 {unit: percent, value: 82}
+              gas_percentage: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent, value: 82}
             - !<tag:weldx.bam.de:weldx/aws/process/gas_component-1.0.0>
               gas_chemical_name: carbon dioxide
-              gas_percentage: !unit/quantity-1.1.0 {unit: percent, value: 18}
+              gas_percentage: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent, value: 18}
             common_name: SG
-          torch_shielding_gas_flowrate: !unit/quantity-1.1.0 {unit: liter / minute, value: 20}
+          torch_shielding_gas_flowrate: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> liter / minute, value: 20}
 
 type: object
 properties:
