--- a/weldx/schemas/weldx.bam.de/legacy/core/transformations/rotation-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/legacy/core/transformations/rotation-1.0.0.yaml
@@ -14,7 +14,7 @@ examples:
     - A "xyz" euler rotation with 10, 20 and 60 degree angles as euler representation.
     - |
       !<tag:weldx.bam.de:weldx/core/transformations/rotation-1.0.0>
-        angles: !unit/quantity-1.1.0
+        angles: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0>
           unit: degree
           value: !core/ndarray-1.0.0
             data: [10.0, 20.0, 60.0]
