--- a/weldx/schemas/weldx.bam.de/legacy/groove/iso_9692_1_2013_12/UGroove-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/legacy/groove/iso_9692_1_2013_12/UGroove-1.0.0.yaml
@@ -12,11 +12,11 @@ examples:
     - A simple U-Groove
     - |
       !<tag:weldx.bam.de:weldx/groove/iso_9692_1_2013_12/UGroove-1.0.0>
-        t: !unit/quantity-1.1.0 {unit: millimeter, value: 15}
-        beta: !unit/quantity-1.1.0 {unit: degree, value: 9}
-        R: !unit/quantity-1.1.0 {unit: millimeter, value: 6}
-        b: !unit/quantity-1.1.0 {unit: millimeter, value: 1}
-        c: !unit/quantity-1.1.0 {unit: millimeter, value: 3}
+        t: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter, value: 15}
+        beta: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> degree, value: 9}
+        R: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter, value: 6}
+        b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter, value: 1}
+        c: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter, value: 3}
         code_number: ['1.8']
 
 type: object
