--- a/weldx/schemas/weldx.bam.de/legacy/groove/iso_9692_1_2013_12/VVGroove-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/legacy/groove/iso_9692_1_2013_12/VVGroove-1.0.0.yaml
@@ -12,12 +12,12 @@ examples:
     - A simple VV-Groove
     - |
       !<tag:weldx.bam.de:weldx/groove/iso_9692_1_2013_12/VVGroove-1.0.0>
-        t: !unit/quantity-1.1.0 {unit: millimeter, value: 12}
-        alpha: !unit/quantity-1.1.0 {unit: degree, value: 70}
-        beta: !unit/quantity-1.1.0 {unit: degree, value: 13}
-        b: !unit/quantity-1.1.0 {unit: millimeter, value: 3}
-        c: !unit/quantity-1.1.0 {unit: millimeter, value: 1}
-        h: !unit/quantity-1.1.0 {unit: millimeter, value: 5}
+        t: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter, value: 12}
+        alpha: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> degree, value: 70}
+        beta: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> degree, value: 13}
+        b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter, value: 3}
+        c: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter, value: 1}
+        h: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter, value: 5}
         code_number: ['1.7']
 
 type: object
