--- a/weldx/schemas/weldx.bam.de/legacy/measurement/signal_transformation-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/legacy/measurement/signal_transformation-1.0.0.yaml
@@ -16,7 +16,7 @@ examples:
       !<tag:weldx.bam.de:weldx/measurement/signal_transformation-1.0.0>
         name: AD conversion
         error: !<tag:weldx.bam.de:weldx/measurement/error-1.0.0>
-          deviation: !unit/quantity-1.1.0 { unit: percent, value: 0.5 }
+          deviation: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> { unit: percent, value: 0.5 }
         type_transformation: AD
   -
     - A transformation that calculates amperes based on volts using a given function
@@ -24,12 +24,12 @@ examples:
       !<tag:weldx.bam.de:weldx/measurement/signal_transformation-1.0.0>
         name: Volt-Ampere-Conversion
         error: !<tag:weldx.bam.de:weldx/measurement/error-1.0.0>
-          deviation: !unit/quantity-1.1.0 { unit: percent, value: 1.5 }
+          deviation: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> { unit: percent, value: 1.5 }
         func: !<tag:weldx.bam.de:weldx/core/mathematical_expression-1.0.0>
           expression: a*x + b
           parameters:
-            a: !unit/quantity-1.1.0 { unit: ampere / volt, value: 3 }
-            b: !unit/quantity-1.1.0 { unit: ampere, value: 2 }
+            a: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> { unit: ampere / volt, value: 3 }
+            b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> { unit: ampere, value: 2 }
 
 type: object
 properties:
