--- a/weldx/schemas/weldx.bam.de/weldx/aws/design/weld_details-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/aws/design/weld_details-0.1.0.yaml
@@ -17,9 +17,7 @@ properties:
   weld_sizes:
     description: |
       Linear dimensions of cross sectional weld features. Sizes are of design and actual features. TODO CLASS
-    oneOf:
-      - tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.*"
-      - tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
+    tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.*"
 
   number_of_passes:
     description: |
