--- a/weldx/schemas/weldx.bam.de/weldx/aws/process/shielding_gas_type-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/aws/process/shielding_gas_type-0.1.0.yaml
@@ -17,10 +17,10 @@ examples:
         gas_component:
         - !<asdf://weldx.bam.de/weldx/tags/aws/process/gas_component-0.1.0>
           gas_chemical_name: argon
-          gas_percentage: !unit/quantity-1.1.0 {unit: percent, value: 82}
+          gas_percentage: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent, value: 82}
         - !<asdf://weldx.bam.de/weldx/tags/aws/process/gas_component-0.1.0>
           gas_chemical_name: carbon dioxide
-          gas_percentage: !unit/quantity-1.1.0 {unit: percent, value: 18}
+          gas_percentage: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent, value: 18}
         common_name: SG
 
 properties:
