--- a/weldx/schemas/weldx.bam.de/weldx/core/mathematical_expression-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/core/mathematical_expression-0.1.0.yaml
@@ -18,8 +18,8 @@ examples:
       !<asdf://weldx.bam.de/weldx/tags/core/mathematical_expression-0.1.0>
         expression: a*x + b
         parameters:
-          a: !unit/quantity-1.1.0 {unit: volt, value: 1.2}
-          b: !unit/quantity-1.1.0 {unit: volt, value: 3.4}
+          a: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> volt, value: 1.2}
+          b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> volt, value: 3.4}
 
 type: object
 properties:
