--- a/weldx/schemas/weldx.bam.de/weldx/debug/test_shape_validator-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/debug/test_shape_validator-0.1.0.yaml
@@ -28,9 +28,7 @@ properties:
     wx_shape: [1]
 
   quantity:
-    oneOf:
-      - tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.*"
-      - tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
+    tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.*"
     wx_shape: [1]
 
   timeseries:
