--- a/weldx/schemas/weldx.bam.de/weldx/equipment/measurement_equipment-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/equipment/measurement_equipment-0.1.0.yaml
@@ -21,12 +21,12 @@ examples:
           name: AD conversion current measurement
           type_transformation: AD
           error: !<asdf://weldx.bam.de/weldx/tags/measurement/error-0.1.0>
-            deviation: !unit/quantity-1.1.0 {unit: percent, value: 0.01}
+            deviation: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent, value: 0.01}
           func: !<asdf://weldx.bam.de/weldx/tags/core/mathematical_expression-0.1.0>
             expression: a*x + b
             parameters:
-              a: !unit/quantity-1.1.0 {unit: 1 / volt, value: 3276.8}
-              b: !unit/quantity-1.1.0 {unit: dimensionless, value: 0.0}
+              a: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> 1 / volt, value: 3276.8}
+              b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> dimensionless, value: 0.0}
 
 type: object
 properties:
