--- a/weldx/schemas/weldx.bam.de/weldx/groove/iso_9692_1_2013_12/HUGroove-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/groove/iso_9692_1_2013_12/HUGroove-0.1.0.yaml
@@ -11,11 +11,11 @@ examples:
     - A simple HU-Groove
     - |
       !<asdf://weldx.bam.de/weldx/tags/groove/iso_9692_1_2013_12/HUGroove-0.1.0>
-        t: !unit/quantity-1.1.0 {unit: millimeter, value: 18}
-        beta: !unit/quantity-1.1.0 {unit: degree, value: 15}
-        R: !unit/quantity-1.1.0 {unit: millimeter, value: 8}
-        b: !unit/quantity-1.1.0 {unit: millimeter, value: 2}
-        c: !unit/quantity-1.1.0 {unit: millimeter, value: 3}
+        t: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter, value: 18}
+        beta: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> degree, value: 15}
+        R: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter, value: 8}
+        b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter, value: 2}
+        c: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit:  !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter, value: 3}
         code_number: ['1.11', '2.10']
 
 type: object
