--- a/weldx/schemas/weldx.bam.de/weldx/unit/quantity-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/unit/quantity-0.1.0.yaml
@@ -46,4 +46,5 @@ properties:
       The unit corresponding to the values
     tag: "asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.*"
 required: [value, unit]
+propertyOrder: [value, unit]
 ...
