--- a/weldx/schemas/weldx.bam.de/legacy/measurement/error-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/legacy/measurement/error-1.0.0.yaml
@@ -14,7 +14,7 @@ examples:
     - An error representing a deviation of 0.1%.
     - |
       !<tag:weldx.bam.de:weldx/measurement/error-1.0.0>
-        deviation: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent, value: 0.1}
+        deviation: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 0.1, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent}
 
 type: object
 properties:
