--- a/weldx/schemas/weldx.bam.de/weldx/aws/process/gas_component-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/aws/process/gas_component-0.1.0.yaml
@@ -14,7 +14,7 @@ examples:
     - |
       !<asdf://weldx.bam.de/weldx/tags/aws/process/gas_component-0.1.0>
         gas_chemical_name: argon
-        gas_percentage: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent, value: 82}
+        gas_percentage: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 82, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent}
 
 type: object
 properties:
