--- a/weldx/schemas/weldx.bam.de/weldx/datamodels/single_pass_weld-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/datamodels/single_pass_weld-0.1.0.yaml
@@ -284,14 +284,14 @@ examples:
               signal_type: analog
               unit: V
             error: !<asdf://weldx.bam.de/weldx/tags/measurement/error-0.1.0>
-              deviation: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent, value: 0.1}
+              deviation: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 0.1, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent}
           - &id011 !<asdf://weldx.bam.de/weldx/tags/measurement/source-0.1.0>
             name: Voltage Sensor
             output_signal: &id012 !<asdf://weldx.bam.de/weldx/tags/measurement/signal-0.1.0>
               signal_type: analog
               unit: V
             error: !<asdf://weldx.bam.de/weldx/tags/measurement/error-0.1.0>
-              deviation: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent, value: 0.1}
+              deviation: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 0.1, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent}
           transformations: []
         - &id005 !<asdf://weldx.bam.de/weldx/tags/equipment/measurement_equipment-0.1.0>
           name: Beckhoff ELM3002-0000
@@ -300,22 +300,22 @@ examples:
           - &id006 !<asdf://weldx.bam.de/weldx/tags/measurement/signal_transformation-0.1.0>
             name: AD conversion current measurement
             error: !<asdf://weldx.bam.de/weldx/tags/measurement/error-0.1.0>
-              deviation: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent, value: 0.01}
+              deviation: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 0.01, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent}
             func: !<asdf://weldx.bam.de/weldx/tags/core/mathematical_expression-0.1.0>
               expression: a*x + b
               parameters:
-                a: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> 1 / volt, value: 3276.8}
-                b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> dimensionless, value: 0.0}
+                a: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 3276.8, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> 1 / volt}
+                b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 0.0, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> dimensionless}
             type_transformation: AD
           - &id013 !<asdf://weldx.bam.de/weldx/tags/measurement/signal_transformation-0.1.0>
             name: AD conversion voltage measurement
             error: !<asdf://weldx.bam.de/weldx/tags/measurement/error-0.1.0>
-              deviation: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent, value: 0.01}
+              deviation: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 0.01, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent}
             func: !<asdf://weldx.bam.de/weldx/tags/core/mathematical_expression-0.1.0>
               expression: a*x + b
               parameters:
-                a: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> 1 / volt, value: 3276.8}
-                b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> dimensionless, value: 0.0}
+                a: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 3276.8, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> 1 / volt}
+                b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 0.0, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> dimensionless}
             type_transformation: AD
         measurements:
         - !<asdf://weldx.bam.de/weldx/tags/measurement/measurement-0.1.0>
@@ -368,8 +368,8 @@ examples:
                           func: !<asdf://weldx.bam.de/weldx/tags/core/mathematical_expression-0.1.0>
                             expression: a*x + b
                             parameters:
-                              a: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> ampere, value: 0.030517578125}
-                              b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> ampere, value: 0.0}
+                              a: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 0.030517578125, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> ampere}
+                              b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 0.0, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> ampere}
                           wx_metadata:
                             software: !core/software-1.0.0 {name: Beckhoff TwinCAT ScopeView,
                               version: 3.4.3143}
@@ -431,8 +431,8 @@ examples:
                           func: !<asdf://weldx.bam.de/weldx/tags/core/mathematical_expression-0.1.0>
                             expression: a*x + b
                             parameters:
-                              a: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> volt, value: 0.0030517578125}
-                              b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> volt, value: 0.0}
+                              a: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 0.0030517578125, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> volt}
+                              b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 0.0, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> volt}
                           wx_metadata:
                             software: !core/software-1.0.0 {name: Beckhoff TwinCAT ScopeView,
                               version: 3.4.3143}
@@ -451,12 +451,12 @@ examples:
               gas_component:
               - !<asdf://weldx.bam.de/weldx/tags/aws/process/gas_component-0.1.0>
                 gas_chemical_name: argon
-                gas_percentage: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent, value: 82}
+                gas_percentage: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 82, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent}
               - !<asdf://weldx.bam.de/weldx/tags/aws/process/gas_component-0.1.0>
                 gas_chemical_name: carbon dioxide
-                gas_percentage: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent, value: 18}
+                gas_percentage: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 18, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent}
               common_name: SG
-            torch_shielding_gas_flowrate: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> liter / minute, value: 20}
+            torch_shielding_gas_flowrate: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 20, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> liter / minute}
           weld_speed: !<asdf://weldx.bam.de/weldx/tags/core/time_series-0.1.0>
             unit: millimeter / second
             value: 10
@@ -483,7 +483,7 @@ examples:
             power_source: Quinto
             tag: CLOOS/pulse
           welding_wire:
-            diameter: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter, value: 1.2}
+            diameter: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 1.2, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
         reference_timestamp: !<asdf://weldx.bam.de/weldx/tags/time/timestamp-0.1.0> {value: '2020-11-09T12:00:00'}
         welding_current: *id015
         welding_voltage: *id016
@@ -491,11 +491,11 @@ examples:
           base_metal: {common_name: S355J2+N, standard: 'DIN EN 10225-2:2011'}
           geometry:
             groove_shape: !<asdf://weldx.bam.de/weldx/tags/groove/iso_9692_1_2013_12/VGroove-0.1.0>
-              t: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter, value: 5}
-              alpha: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> degree, value: 50}
-              b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter, value: 1}
-              c: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter, value: 1}
+              t: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 5, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
+              alpha: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 50, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> degree}
+              b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 1, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
+              c: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 1, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
               code_number: ['1.3', '1.5']
-            seam_length: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter, value: 300}
+            seam_length: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 300, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
         wx_metadata: {welder: A.W. Elder}
 ...
