--- a/weldx/schemas/weldx.bam.de/weldx/core/mathematical_expression-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/core/mathematical_expression-0.1.0.yaml
@@ -32,9 +32,7 @@ properties:
     description: |
       List of constant parameters that to be set in the mathematical expression.
     type: object
-    oneOf:
-      - wx_property_tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.*"
-      - wx_property_tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
+    wx_property_tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.*"
 
 required: [expression]
 propertyOrder: [expression, parameters]
