--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,6 +34,16 @@ repos:
     rev: 6.1.1
     hooks:
       - id: pydocstyle
+        files: '^weldx/'
+        exclude: |
+          (?x)^(
+            ^weldx/tags|
+            ^weldx/tests|
+            ^weldx/asdf|
+            .*__.*.py
+          )
+        args:
+          - --convention=numpy
   - repo: https://github.com/nbQA-dev/nbQA
     rev: 1.1.1
     hooks:
